--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "mapbox-gl": "3.2.0",
-    "react-map-gl": "7.1.7",
-    "use-supercluster": "1.2.0",
+    "@google/genai": "^1.41.0",
     "@mapbox/mapbox-gl-draw": "1.4.3",
     "@turf/turf": "7.1.0",
-    "@google/genai": "^1.41.0"
+    "firebase": "^12.9.0",
+    "lucide-react": "^0.344.0",
+    "mapbox-gl": "3.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-map-gl": "7.1.7",
+    "use-supercluster": "1.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
