--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/mapbox-gl-draw": "1.4.3",
     "@turf/turf": "7.1.0",
     "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "3.2.0",
     "react": "18.3.1",
