--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.41.0",
     "@mapbox/mapbox-gl-draw": "1.4.3",
     "@turf/turf": "7.1.0",
+    "axios": "^1.13.5",
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.1",
     "lucide-react": "^0.344.0",
@@ -19,6 +20,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-map-gl": "7.1.7",
+    "sharp": "^0.34.5",
     "use-supercluster": "1.2.0"
   },
   "devDependencies": {
