--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.3.1",
     "react-map-gl": "7.1.7",
     "sharp": "^0.34.5",
-    "use-supercluster": "^1.2.0"
+    "use-supercluster": "^1.2.0",
+    "vite-plugin-node-polyfills": "^0.25.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
