--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.3.1",
     "react-map-gl": "7.1.7",
     "sharp": "^0.34.5",
+    "swiper": "^12.1.2",
     "use-supercluster": "^1.2.0",
     "vite-plugin-node-polyfills": "^0.25.0"
   },
